# snow

./: .flake8  .gitignore  README.md  pyproject.toml  tox.ini
servicenow_api_tools/: operators.py  utils.py
servicenow_api_tools/clients/: __init__.py  clients.py  endpoint.py  querybuilder.py  runner.py  utils.py
servicenow_api_tools/introspection/: __init__.py  introspection.py
servicenow_api_tools/mock_api_server/: __init__.py  endpoint.py  parsers.py  query.py
servicenow_api_tools/reporting/: __init__.py  build.py  data_quality.py  definitions.py  publish.py  stats_report.py  utils.py
servicenow_api_tools/schema/: schema.py
servicenow_api_tools/synthetic_dataset/: __init__.py  generators.py
tests/: test_clients.py  test_converters.py  test_data_quality_reports.py  test_introspection.py  test_querybuilder.py  test_report_definitions.py  test_stats_report.py  test_synthetic_data_parsers.py  test_synthetic_data_query.py  test_utils.py  utils.py
tests/dataset/: activity.json  activity_type.json  case.json  location.json  person.json  phase.json
tests/reporting/: stats-report-definition.json
tests/results/: test_data_quality_report_v1.csv  test_date_between_matcher_table_query.json  test_get_mappings_for_table.json  test_group_by_stats_query.json  test_id_to_name.json  test_in_matcher_table_query.json  test_introspect_api_for_schema.json  test_introspect_api_for_schema_and_update_catalog.json  test_isnotempty_matcher_table_query.json  test_name_to_id.json  test_no_matcher_stats_query.json  test_not_equal_matcher_limit_offset_table_query.json  (+8 more)
(+11 files in other folders)
