[tool.poetry]
name = "servicenow-api-tools"
version = "0.1.4"
description = "Tools to help with writing applications against the ServiceNow rest api"
authors = ["Shaun Verch"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
pandas = "^1.3.4"
click = "^8.0.3"
lark = "^0.11.3"
urllib3 = "^1.26.7"
pandas-stubs = "^1.2.0"
Faker = "^9.7.1"
tabulate = "^0.8.9"
dacite = "^1.6.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.910"
tox = "^3.24.4"
tox-poetry = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
